--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "private": true,
   "version": "0.1.0",
+  "proxy": "http://localhost:4000",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.3.4",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
